--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -1190,8 +1190,69 @@
     "PleaseContactUs": "聯繫客服",
     "FaceBookPixelID": "Facebook 像素 ID",
     "GAID": "GA追蹤碼ID",
-    "ThisDeleteActionCannotBeReverted": "此操作將無法復原，刪除後將立即儲存。您確定要刪除嗎？"
-
-
+    "ThisDeleteActionCannotBeReverted": "此操作將無法復原，刪除後將立即儲存。您確定要刪除嗎？",
+    "Menu:Campaigns": "優惠活動",
+    "Campaigns": "優惠活動",
+    "Permission:Campaigns": "優惠活動",
+    "NewCampaign": "新增優惠活動",
+    "CreateNewCampaign": "建立新優惠活動",
+    "CampaignName": "優惠活動名稱",
+    "TargetAudience": "目標對象",
+    "EnterCampaignName": "請輸入優惠活動名稱",
+    "EnterCampaignDescription": "請輸入優惠活動描述",
+    "PromotionModule": "促銷模組",
+    "Enum:PromotionModule.0": "折扣",
+    "Enum:PromotionModule.1": "購物金",
+    "Enum:PromotionModule.2": "加購商品",
+    "Enum:PromotionModuleDescription.0": "百分比或固定金額折扣",
+    "Enum:PromotionModuleDescription.1": "用於購物的商店購物金",
+    "Enum:PromotionModuleDescription.2": "附贈商品",
+    "SelectProducts": "選擇商品",
+    "Enum:DiscountMethod.0": "直接折扣",
+    "Enum:DiscountMethod.1": "最低消費金額，需消費達 $",
+    "Enum:DiscountMethod.2": "運費折扣",
+    "ShippingDiscountSettings": "運費折扣設定",
+    "SelectShippingMethods": "選擇配送方式",
+    "AllMembers": "所有會員",
+    "CustomCode": "自訂代碼",
+    "CreateCampaign": "建立優惠活動",
+    "CampaignDetails": "優惠活動詳情",
+    "ConfigureDiscount": "設定折扣",
+    "CampaignDescription": "優惠活動描述",
+    "ValidationErrorsDescription": "請修正驗證錯誤後再試一次。",
+    "GroupBuyIds": "團購活動",
+    "ProductIds": "商品",
+    "ApplyToAllProducts": "套用至所有商品",
+    "MinimumSpendAmount": "最低消費金額",
+    "DiscountType": "折扣類型",
+    "DiscountPercentage": "折扣百分比",
+    "ApplyToAllShippingMethods": "套用至所有配送方式",
+    "DeliveryMethods": "配送方式",
+    "ConfigureShoppingCredit": "購物金設定",
+    "Enum:CalculationMethod.0": "統一計算",
+    "Enum:CalculationMethod.1": "階段計算",
+    "Enum:ApplicableItem.0": "加購商品",
+    "Enum:ApplicableItem.1": "運費",
+    "ValidForDays": "有效天數",
+    "CalculationPercentage": "計算百分比",
+    "PointsToReceive": "可獲得點數",
+    "ApplicableItem": "適用項目",
+    "Enum:AddOnDisplayPrice.0": "不顯示原價",
+    "Enum:AddOnDisplayPrice.1": "顯示商品原價",
+    "Enum:AddOnDisplayPrice.2": "顯示商品團購價",
+    "Enum:AddOnProductCondition.0": "無最低消費限制",
+    "Enum:AddOnProductCondition.1": "需達到特定消費門檻",
+    "AddOnProductId": "加購商品",
+    "IsUnlimitedQuantity": "數量無限制",
+    "AddOnDisplayPrice": "加購商品顯示價格",
+    "AddOnProductCondition": "加購條件",
+    "EditCampaign": "編輯優惠活動",
+    "Pikachu:CampaignWithSameNameAlreadyExists": "已存在相同名稱的優惠活動「{name}」。",
+    "AreYouSureToSetCampaignStatus": "您確定要將此優惠活動設為 {0} 嗎？",
+    "AreYouSureToDeleteCampaign": "您確定要刪除優惠活動 {0} 嗎？",
+    "YouAreNotAuthorized": "您無權執行此操作。",
+    "UpdateCampaign": "更新優惠活動",
+    "TotalCampaigns": "優惠活動總數",
+    "ActiveCampaigns": "啟用中的優惠活動"
   }
 }
