Commit for Pk-1446

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -1518,6 +1518,7 @@
     "CopyId": "Copy ID",
     "MinNumberOfItems": "Min Number of Items",
     "MaxNumberOfItems": "Max Number of Items",
-    "AreYouSureYouWantToClearTheCarts": "All the items in the selected carts will be removed. This action can not be reverted."
+    "AreYouSureYouWantToClearTheCarts": "All the items in the selected carts will be removed. This action can not be reverted.",
+    "OnlyAcceptsICO": "Only Accepts ICO"
   }
 }
