Commit For Pk-1451

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -27,7 +27,7 @@
     "AddBadge": "新增",
     "AddItemStyleButton": "建立新的屬性名稱",
     "AddModule": "新增模塊",
-    "Address": "地址",
+    "Address": "收件人地址",
     "AddressDetails": "詳細地址",
     "AdvanceSetting": "進階設定",
     "AllHandOverTheGoodsWithoutPayment": "All Handover The Goods Without Payment",
@@ -884,7 +884,7 @@
     "UseECPayelectronicreceipt": "使用綠界電子發票",
     "Ifthissettingisturnedoff,pleaseprinttheinvoiceforthecustomer": "若此設定關閉,請自行為客戶列印發票",
     "StatusOnInvoiceIssue": "發票開立狀態",
-    "City": "城市",
+    "City": "收件人城市",
     "CVSStoreId": "CVS Store Id",
     "CVSStoreOutSide": "CVS Store OutSide",
     "StoreCustomerServiceReply": "存放客戶回覆",
@@ -1256,7 +1256,50 @@
     "ActiveCampaigns": "啟用中的優惠活動",
     "ProductGroupModule": "商品模組",
     "DeliveryTimePreferance": "收件時段",
-    "OnlyAcceptsICO": "只接受 ICO檔案"
+    "OnlyAcceptsICO": "只接受 ICO檔案",
+    "StandardPrinting": "列印托運單 (A4)",
+    "Print": "列印理貨單",
+    "SelectGroupBuy": "選擇團購",
+    "WaitingForPayment": "待付款",
+    "PrepareShipment": "處理中",
+    "ToBeShipped": "待出貨",
+    "Shipped": "運送中",
+    "Delivered": "已送達",
+    "Return": "退貨中",
+    "ReturnOrder": "退貨",
+    "SplitOrder": "拆單",
+    "PrintOrder": "列印理貨單",
+    "OrderNumber": "訂單編號",
+    "Telephone": "電話",
+    "InvoiceType": "發票類型",
+    "InvoiceTitle": "發票抬頭",
+    "TaxNumber": "統一編號",
+    "Recipient": "收件人",
+    "RecipientPhoneNumber": "收件人電話",
+    "RecipientPostalCode": "收件人郵遞區號",
+    "RecipientComments": "收件人備註",
+    "Processing": "處理中",
+    "OrderHistory": "訂單記錄",
+    "Action": "操作",
+    "ActionDetails": "操作內容",
+    "OrderCreatedLog": "訂單成立",
+    "PaymentProcessedTitle": "付款完成",
+    "GenerateDeliveryNumberLogTitle": "產生托運單號",
+    "OrderToBeShippedTitle": "訂單狀態變更為 '待出貨'",
+    "OrderShippedTitle": "商品運送中",
+    "InvoiceIssuedTitle": "發票已開立",
+    "OrderCreated": "訂單 {0} 已成立.",
+    "OrderShipped": "訂單狀態變更為 '運送中'. 原訂單狀態： {0}, 當前訂單狀態： {1}.",
+    "OrderToBeShipped": "訂單狀態變更為 '待出貨'. 原訂單狀態: {0}, 當前訂單狀態： {1}.",
+    "UnitPrice": "單價",
+    "Subtotal": "小計",
+    "SubTotal": "小計",
+    "Total": "總計",
+    "ShipmentNotify": "產生托運單號",
+
+
+
+
 
   }
 }
