--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -158,7 +158,7 @@
     "FamilyMart1": "綠界 | 全家",
     "FamilyMartC2c": "綠界 | 全家 C2C",
     "FamilyMartC2C": "全家 C2C",
-    "Filter": "篩選",
+    "Filter": "篩選器",
     "First": "前置",
     "Footer": "結尾訊息",
     "FreebieAmount": "可贈送數量",
@@ -1296,10 +1296,18 @@
     "SubTotal": "小計",
     "Total": "總計",
     "ShipmentNotify": "產生托運單號",
-
-
-
-
-
+    "Menu:ShopCarts": "購物車管理",
+    "ShoppingCart": "購物車管理",
+    "Clear": "清除",
+    "NumberOfItems": "商品總數量",
+    "AddProduct": "新增商品",
+    "CopyId": "複製 ID",
+    "MinNumberOfItems": "最少商品數量",
+    "MaxNumberOfItems": "最多商品數量",
+    "AreYouSureYouWantToClearTheCarts": "所有選取購物車中的商品將被移除，此操作無法還原。",
+    "Member": "會員",
+    "TotalAmount": "商品總額",
+    "Stock": "庫存",
+    "SelectItem": "選取項目"
   }
 }
