Commit for Pk-1487

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -1519,6 +1519,7 @@
     "MinNumberOfItems": "Min Number of Items",
     "MaxNumberOfItems": "Max Number of Items",
     "AreYouSureYouWantToClearTheCarts": "All the items in the selected carts will be removed. This action can not be reverted.",
-    "OnlyAcceptsICO": "Only Accepts ICO"
+    "OnlyAcceptsICO": "Only Accepts ICO",
+    
   }
 }
