--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -564,6 +564,7 @@
     "RefundWholeOrder": "Refund Whole Order",
     "SelectItemForRefund": "Select Item For Refund",
     "RefundAmount": "Refund Amount",
+    "RefundAmount1": "Refund Amount",
     "Succeeded cash flow": "Succeeded",
     "Succeeded void invoice": "Succeeded",
     "Succeeded in return": "Succeeded",
