--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -158,7 +158,7 @@
     "FamilyMart1": "綠界 | 全家",
     "FamilyMartC2c": "綠界 | 全家 C2C",
     "FamilyMartC2C": "全家 C2C",
-    "Filter": "篩選器",
+    "Filter": "篩選",
     "First": "前置",
     "Footer": "結尾訊息",
     "FreebieAmount": "可贈送數量",
@@ -936,7 +936,7 @@
     "SquareCornersWithoutFullWidth": "直角無全寬",
     "FullWidthWithLargeImage": "全寬大圖",
     "available": "可用",
-    "New": "新",
+    "New": "新會員",
     "TenantInformationUpdated": "租戶資訊已更新!",
     "CustomerServiceUpdated": "客服資訊已更新!",
     "PrivacyPolicyUpdated": "隱私政策已更新!",
@@ -1343,7 +1343,17 @@
     "RefundAmount1": "退款金額",
     "Areyousureyouwanttoreturnthisorder": "您確認要執行退貨嗎？",
     "RecipientInformation": "收件人資訊",
-    "Remarks": "收件人備註"
+    "Remarks": "收件人備註",
+    "MinRegistrationDate": "注冊開始日期",
+    "MaxRegistrationDate": "注冊結束日期",
+    "MinOrders": "最小訂單數",
+    "MaxOrders": "最大訂單數",
+    "MinSpent": "最低消費金額",
+    "MaxSpent": "最高消費金額",
+    "Blacklisted": "黑名單",
+    "Existing": "現有會員",
+    "MobileNumber": "聯絡電話",
+    "Gender": "性別"
 
 
 
