--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -1353,9 +1353,10 @@
     "Blacklisted": "黑名單",
     "Existing": "現有會員",
     "MobileNumber": "聯絡電話",
-    "Gender": "性別"
-
-
-
+    "Gender": "性別",
+    "Menu:EmailManagement": "Email 管理",
+    "Menu:EmailSettings": "設定",
+    "Menu:CreateEdm": "建立EDM",
+    "CreateEdm": "建立EDM"
   }
 }
