Commit For Pk-1498

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -1353,7 +1353,8 @@
     "Blacklisted": "黑名單",
     "Existing": "現有會員",
     "MobileNumber": "聯絡電話",
-    "Gender": "性別"
+    "Gender": "性別",
+    "ReturnedApplication": "退款已取消"
 
 
 
