--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -1354,7 +1354,7 @@
     "Existing": "現有會員",
     "MobileNumber": "聯絡電話",
     "Gender": "性別",
-    "ReturnedApplication": "退款已取消"
+    "ReturnedApplication": "退款已取消",
 
 
     "Menu:EmailManagement": "Email 管理",
