--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -427,7 +427,7 @@
     "SalesURL": "銷售連結",
     "SalesURL1": "銷售連結 1",
     "SalesURL2": "銷售連結 2",
-    "Subject": "主旨",
+    "Subject": "標題",
 
     "ProfitShare": "分潤",
     "SearchProducts": "搜尋商品...",
@@ -1355,11 +1355,30 @@
     "MobileNumber": "聯絡電話",
     "Gender": "性別",
     "ReturnedApplication": "退款已取消",
-
-
     "Menu:EmailManagement": "Email 管理",
     "Menu:EmailSettings": "設定",
     "Menu:CreateEdm": "建立EDM",
-    "CreateEdm": "建立EDM"
+    "CreateEdm": "建立EDM",
+    "SendDate": "發送日期",
+    "SendTime": "發送時間",
+    "Enum:EdmTemplateType.0": "自訂內容",
+    "Enum:EdmTemplateType.1": "優惠活動模板",
+    "Enum:EdmTemplateType.2": "購物車模板",
+    "Campaign": "優惠活動",
+    "SelectCampaign": "請選擇優惠活動",
+    "SelectSendFrequency": "請選擇發送頻率",
+    "Enum:EdmSendFrequency.0": "每日",
+    "Enum:EdmSendFrequency.1": "每週",
+    "Enum:EdmSendFrequency.2": "每月",
+    "Enum:EdmMemberType.0": "所有會員",
+    "Enum:EdmMemberType.1": "每個會員標籤",
+    "Enum:EdmMemberType.2": "特定會員標籤",
+    "SelectMemberTags": "請選擇會員標籤",
+    "EdmTemplateTypeShoppingCartSubject": "您的購物車裡還有東西沒有清空喔！",
+    "Message": "內容",
+    "GroupBuy": "團購",
+    "SendDateRange": "發送日期區間",
+    "SendFrequency": "發送頻率",
+    "TheFieldMustBeGreaterOrEqualTo": "{0} 必須大於或等於 {1}。"
   }
 }
