--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -1385,7 +1385,8 @@
     "Weekly": "每週",
     "Monthly": "每月",
     "NewAddOn": "新增加購商品",
-    "AddNewDiscountCode": "新增折扣優惠"
+    "AddNewDiscountCode": "新增折扣優惠",
+    "SaveChanges": "儲存"
 
   }
 }
