--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -1381,6 +1381,12 @@
     "SendDateRange": "發送日期區間",
     "SendFrequency": "發送頻率",
     "TheFieldMustBeGreaterOrEqualTo": "{0} 必須大於或等於 {1}。",
+    "GroupBuys": "團購",
+    "GroupBuyType": "團購類型",
+    "MinSendTime": "最小發送時間",
+    "MaxSendTime": "最大發送時間",
+    "TemplateType": "模板類型",
+    "EditEdm": "編輯 EDM",
     "Enabled": "啟用狀態",
     "Weekly": "每週",
     "Monthly": "每月",
