#PK-1414 Removed EdmMemberType

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -1547,9 +1547,7 @@
     "Enum:EdmSendFrequency.0": "Day",
     "Enum:EdmSendFrequency.1": "Week",
     "Enum:EdmSendFrequency.2": "Month",
-    "Enum:EdmMemberType.0": "All Members",
-    "Enum:EdmMemberType.1": "Every Member Tag",
-    "Enum:EdmMemberType.2": "Specific Member Tags",
+    "SpecificMemberTags": "Specific Member Tags",
     "SelectMemberTags": "Select Member Tags",
     "TheFieldMustBeGreaterOrEqualTo": "{0} must be greater than or equal to {1}.",
     "EdmTemplateTypeShoppingCartSubject": "You still have items left in your shopping cart!",
