--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -1372,8 +1372,7 @@
     "Enum:EdmSendFrequency.1": "每週",
     "Enum:EdmSendFrequency.2": "每月",
     "Enum:EdmMemberType.0": "所有會員",
-    "Enum:EdmMemberType.1": "每個會員標籤",
-    "Enum:EdmMemberType.2": "特定會員標籤",
+    "SpecificMemberTags": "特定會員標籤",
     "SelectMemberTags": "請選擇會員標籤",
     "EdmTemplateTypeShoppingCartSubject": "您的購物車裡還有東西沒有清空喔！",
     "Message": "內容",
