Commit For Pk-1535

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -1558,6 +1558,7 @@
     "MaxSendTime": "Max Send Time",
     "AreYouSureToDeleteEdm": "Are you sure to delete this EDM?",
     "NewAddOn": "New",
-    "AddNewDiscountCode": "New"
+    "AddNewDiscountCode": "New",
+    "Invoicehasvoided": "Invoice has successfully voided"
   }
 }
