Fix For Pk-1502

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -1559,6 +1559,7 @@
     "AreYouSureToDeleteEdm": "Are you sure to delete this EDM?",
     "NewAddOn": "New",
     "AddNewDiscountCode": "New",
-    "Invoicehasvoided": "Invoice has successfully voided"
+    "Invoicehasvoided": "Invoice has successfully voided",
+    "ToUsePoints": "To Use Points"
   }
 }
