--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -1397,7 +1397,8 @@
     "Yes": "是",
     "PostOffice": "郵局",
     "Invoicehasvoided": "發票已成功做廢",
-    "ToUsePoints": "可使用點數"
+    "ToUsePoints": "可使用點數",
+    "Weight": "商品重量"
 
   }
 }
