--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -1563,6 +1563,8 @@
     "AddNewDiscountCode": "New",
     "Invoicehasvoided": "Invoice has successfully voided",
     "ToUsePoints": "To Use Points",
-    "SaleableQuantitycannotbegreaterthanCurrentStock": "Saleable Quantity cannot be greater than Current Stock."
+    "SaleableQuantitycannotbegreaterthanCurrentStock": "Saleable Quantity cannot be greater than Current Stock.",
+    "ItemDetailsInstructions": "If one item have multiple item details add item that times with same item no.",
+    "TaxTypesInstructions": "TaxTypes: Taxable and Non Taxable"
   }
 }
