#PK-1558 Order status modification

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -509,7 +509,7 @@
     "SelectGroupBuy": "Select Group Buy",
     "Shipped": "Shipped",
     "ManualStatusUpdate": "Manual Status Update",
-    "Completed": "Picked Up",
+    "Completed": "Completed",
     "SpecialTaxable": "Special Taxable",
     "DeliveredByStore": "Delivered By Store",
     "DeliveryTime": "Delivery Time",
@@ -1290,6 +1290,7 @@
     "CloseOrderJob": "Close Order Job",
     "OrderClosedDueToInActivityTitle": "Order Closed",
     "OrderClosedDueToInActivity": "Order Closed due to inactivity: {0} Status changed from '{1}' to '{2}'",
+    "OrderCompletedDueToInActivity": "Order Completed due to inactivity: {0} Status changed from '{1}' to '{2}'",
     "AreYouSureToUpdatePostOffice?": "Are You Sure To Update Post Office ?",
     "AreYouSureToUpdate7-11?": "Are You Sure To Update 7-11 ?",
     "AreYouSureToUpdate7-11C2C?": "Are You Sure To Update 7-11 C2C ?",
