--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -94,7 +94,8 @@
     "Combined": "併單",
     "CombineOrders": "合併訂單",
     "CommodityAttributes": "商品屬性",
-    "Completed": "已取件",
+    "Completed": "完全的",
+    "PickedUp": "已取件",
     "ConfigureYourSKUPattern": "設置SKU格式",
     "ConfigureYourSKUPatternMessage": "選取你想要設置該商品屬性的SKU",
     "CopyItem": "複製商品",
