--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -94,7 +94,7 @@
     "Combined": "併單",
     "CombineOrders": "合併訂單",
     "CommodityAttributes": "商品屬性",
-    "Completed": "完全的",
+    "Completed": "完成訂單",
     "PickedUp": "已取件",
     "ConfigureYourSKUPattern": "設置SKU格式",
     "ConfigureYourSKUPatternMessage": "選取你想要設置該商品屬性的SKU",
@@ -1545,7 +1545,16 @@
     "VoidUser": "作廢人員",
     "Succeeded void invoice": "已折讓",
     "Voided": "已作廢",
-    "VoidReason": "作廢原因"
+    "VoidReason": "作廢原因",
+    "Split": "拆單",
+    "PersonalInvoice": "個人發票",
+    "SelectCity": "選擇縣市",
+    "ShippingNumber": "托運單號",
+    "PleaseSelectOrderItem": "請先勾選訂單項目再進行編輯。",
+    "OrderSplitFromTitle": "訂單拆單來源",
+    "RecipientName": "收件人姓名",
+    "Cancelled": "取消"
+
 
 
 
