--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -1567,6 +1567,7 @@
     "SaleableQuantitycannotbegreaterthanCurrentStock": "Saleable Quantity cannot be greater than Current Stock.",
     "ItemDetailsInstructions": "If one item have multiple item details add item that times with same item no.",
     "TaxTypesInstructions": "TaxTypes: Taxable and Non Taxable",
-    "SelectCity": "Select City"
+    "SelectCity": "Select City",
+    "T-CatAbnormalStatus": "Abnormal Status detected for T-Cat Order #{0}. The status code {1} suggests {2}"
   }
 }
