--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -1584,6 +1584,9 @@
     "Enum:InventoryActionType.0": "Add Stock",
     "Enum:InventoryActionType.1": "Deduct Stock",
     "Enum:InventoryActionType.2": "Item Sold",
+    "StockAdded": "Stock Added",
+    "StockDeducted": "Stock Deducted",
+    "ItemSold": "Item Sold: Order #{0}",
     "NoStockAdjustmentDescription": "No stock changes have been logged for this item yet.",
     "T-CatAbnormalStatus": "Abnormal Status detected for T-Cat Order #{0}. The status code {1} suggests {2}"
   }
