#PK-1483 Item Sold Inventory logs

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -1588,6 +1588,7 @@
     "StockDeducted": "Stock Deducted",
     "ItemSold": "Item Sold: Order #{0}",
     "NoStockAdjustmentDescription": "No stock changes have been logged for this item yet.",
+    "Pikachu:InvalidInventoryStock": "The field '{field1}' can not be greater than '{field2}'.",
     "T-CatAbnormalStatus": "Abnormal Status detected for T-Cat Order #{0}. The status code {1} suggests {2}"
   }
 }
