--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -1589,6 +1589,7 @@
     "StockAdded": "Stock Added",
     "StockDeducted": "Stock Deducted",
     "ItemSold": "Item Sold: Order #{0}",
+    "AdjustStockAmount": "Amount",
     "NoStockAdjustmentDescription": "No stock changes have been logged for this item yet.",
     "Pikachu:InvalidInventoryStock": "The field '{field1}' can not be greater than '{field2}'.",
     "T-CatAbnormalStatus": "Abnormal Status detected for T-Cat Order #{0}. The status code {1} suggests {2}"
